// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search render correctly with value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 24,
        "flexDirection": "row",
        "height": 108,
        "justifyContent": "center",
        "maxWidth": "95%",
        "paddingLeft": 36,
        "paddingRight": 24,
      },
      undefined,
    ]
  }
>
  <View />
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[MockFunction]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    selectionColor="#2B78EE"
    style={
      Array [
        Object {
          "color": "#20242D",
          "flex": 1,
          "fontSize": 48,
          "padding": 0,
          "paddingHorizontal": 24,
        },
        undefined,
      ]
    }
    value="value"
  />
  <View
    accessibilityLabel="cancel"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#D1D4DB",
        "borderRadius": 72,
        "justifyContent": "center",
        "padding": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Object {
          "color": "#5E6678",
          "fontFamily": "Neotis",
          "fontSize": 48,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Search render correctly without value 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 24,
        "flexDirection": "row",
        "height": 108,
        "justifyContent": "center",
        "maxWidth": "95%",
        "paddingLeft": 36,
        "paddingRight": 24,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Object {
        "color": "#5E6678",
        "fontFamily": "Neotis",
        "fontSize": 72,
      }
    }
  >
    
  </Text>
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    selectionColor="#2B78EE"
    style={
      Array [
        Object {
          "color": "#20242D",
          "flex": 1,
          "fontSize": 48,
          "padding": 0,
          "paddingHorizontal": 24,
        },
        undefined,
      ]
    }
  />
</View>
`;
